# plib-cli

./: .gitignore  README.md  pyproject.toml
src/plib_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  models.py  parsers.py
tests/: test_cli_output.py  test_client.py  test_config.py  test_parsers.py  test_search_all.py
tests/fixtures/: material.html  profile.html  search.html
